# mmagolf-judge

./: .gitignore  README.md  index.js  package-lock.json  package.json
compile-helper/: Cargo.toml
compile-helper/src/: main.rs
judgment/: Cargo.toml
judgment/src/: main.rs
languages/: bash.Dockerfile  dc.Dockerfile  golf-base.Dockerfile  languages.json  ruby.Dockerfile
languages/golf-base/: Dockerfile
languages/golf-base/rusty-club/: Cargo.toml
problems/p1/: test-cases
run-helper/: Cargo.toml
run-helper/src/: main.rs
volume/: compile-helper  run-helper
