[package]
name = "run-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
wait-timeout = "0.2"
base64 = "0.13.0"
subprocess = "0.2.9"
