[package]
name = "rusty-club"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "=0.4.0"
num-derive = "=0.3.3"
ndarray = "=0.15.4"
nalgebra = "=0.31.0"
libm = "=0.2.2"
rand = { version = "=0.8.5", features = ["small_rng"] }
getrandom = "=0.2.6"
petgraph = "=0.6.0"
indexmap = "=1.8.1"
regex = "=1.5.5"
once_cell = "1.10.0"
ordered-float = "=3.0.0"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.10.3"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.6.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.1"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.3", features = ["derive"] }
text_io = "=0.1.10"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.8.0"
memoise = "=0.3.2"
